--- a/src/style/style.css
+++ b/src/style/style.css
@@ -16,12 +16,12 @@
   -o-border-radius: 20px;
 }
 
-.Hotspot[slot="hotspot-"] {
+.Hotspot[slot='hotspot-'] {
   --min-hotspot-opacity: 0;
   background-color: red;
 }
 
-.Hotspot[slot="hotspot-"]:not([data-visible]) {
+.Hotspot[slot='hotspot-']:not([data-visible]) {
   background-color: transparent;
   border: 3px solid blue;
 }
@@ -33,7 +33,7 @@
   border-radius: 10px;
   padding: 15px;
   color: aliceblue;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16px;
 }
 /* This keeps child nodes hidden while the element loads */
